tests/NormalTests/paczka1/fuzzy1/74067868.err
Error in line 7: pXTPQv A942 28,3
Error in line 14: p.TPQv S614 65,7
Error in line 6: yqywrYqAy S614 59,0
Error in line 15: yqywrYqAy A300 19,7
Error in line 10: pXTPQv S334 91,5
Error in line 25: A942 S614 65,6
